--- a/css/site.css
+++ b/css/site.css
@@ -4,3 +4,95 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.header {
+    width: 1190px;
+    height: 300px;
+    background-image: url("/images/background02.jpg");
+    background-size: 1190px 300px;
+    box-shadow: inset 1000px 1000px rgba(0, 0, 0, 0.5);
+}
+
+.header-top {
+    width: 1190px;
+    height: 40px;
+    box-shadow: inset 1000px 1000px rgba(0, 0, 0, 0.6);
+    margin: auto;
+}
+
+.header-top h1{
+    font-size: 16px;
+    color: #fff;
+    text-align: center;
+   padding-top: 13px;
+}
+
+.header-content{
+    margin: auto;
+    margin-top: 40px;
+}
+
+.header-content p, .header-content h1{
+ text-align: center;
+ color: #fff;
+}
+
+.header-content p{
+    margin-top: 20px;
+    font-size: 1.1em;
+}
+
+.avatar img{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    justify-content: center;
+    border: 6px solid #fff;
+    border-radius: 100%;
+    margin-top: 30px;
+}
+
+.avatar{
+    margin: auto;
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+}
+
+.menu {
+    width: 1190px;
+    height: 600px;
+    background-color: black;
+    margin-top: 6px;
+}
+
+.menu-content {
+    width: 810px;
+    height: 600px;
+    margin: auto;
+    padding-top: 100px;
+}
+
+.menu-item-1, .menu-item-2, 
+.menu-item-3, .menu-item-4 {
+    display: flex;
+    width: 805px;
+    margin: auto;
+    padding-top: 5px;
+    border-bottom: 2px solid #fff;
+    margin-top: 60px;
+}
+
+.menu-item-1 p, .menu-item-2 p, 
+.menu-item-3 p, .menu-item-4 p{
+    color: #fff;
+    align-content: center;
+    padding-top: 5px;
+    padding-left: 2px;
+}
+
+.menu-item-1 img, .menu-item-2 img, 
+.menu-item-3 img, .menu-item-4 img{
+   width: 26px;
+   height: 26px;
+}
